--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -69,6 +69,14 @@ nav {
     font-weight: 500;
 }
 
+.nav__links > li {
+    margin-left: 10px;
+}
+
+.nav__links > li:first-child {
+    margin-left: 0;
+}
+
 .nav__icon {
     display: none; 
 }
@@ -136,13 +144,13 @@ nav {
 .btn1 {
     border: 2px solid #3685fb;
     background-color: white;
-    margin: auto;
     color: black;
     border-radius: 50px;
     padding: 12px 32px;
     font-family: outfit, sans-serif;
     font-weight: 600;
     font-size: 16px;
+    ;
 }
 .btn1:hover {
     background-color: #3685fb; 
